cgange from green to rgb

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -8,7 +8,7 @@
   <title>Digital Lync LMS</title>
   <style>
     body {
-      background-color: lightgreen !important;
+      background-color: rgb(238, 144, 199) !important;
     }
   </style>
 </head>
